--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ node_modules/
 # Build output
 dist/
 
+# Pasta de produção
+#backend-prod/
+
 # Environment variables
 .env
 
@@ -23,6 +26,3 @@ npm-debug.log*
 # OS
 .DS_Store
 Thumbs.db
-
-# Pasta de produção
-backend-prod/
